# nanopore_sync

./: .gitignore  LICENSE  README.md  nanopore-sync.py  nanopore-sync.service  pyproject.toml
src/nanopore_sync/: cli.py  config.py  logging.py  sync.py  watchers.py
tests/: test_sync.py
