[project]
name = "nanopore-sync"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dodslaser", email = "2969909+dodslaser@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydanclick>=0.5.1",
    "pydantic>=2.11.5",
    "rich-click>=1.8.9",
    "watchdog>=6.0.0",
]

[project.scripts]
nanopore-sync = "nanopore_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120
